workshop03/dov-bear.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dov-deploy
  name: dov-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dov-pod
  template:
    metadata:
      labels:
        app: dov-pod
    spec:
      containers:
      - image: stackupiss/dov-bear:v2
        name: dov-bear
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dov-svc
  name: dov-svc
spec:
  selector:
    app: dov-pod
  type: ClusterIP
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  labels:
    name: dov-ing
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend-svc
      port: 
        number: 3000
  rules:
  - host: dov-167.172.5.66.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dov-svc
            port: 
              number: 3000
